--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,3 +1,9 @@
 page-index {
 
 }
+.swiper-pagination-fraction,
+ .swiper-pagination-custom,
+  .swiper-container-horizontal >
+   .swiper-pagination-bullets{
+    bottom:-20px;
+}
