--- a/src/pages/user-center/user-center.scss
+++ b/src/pages/user-center/user-center.scss
@@ -3,4 +3,19 @@ page-user-center {
     background:rgba(246, 86, 23, 0.9);
     color:#fff;
     }
+    .user-center-dingdan{
+         font-size:13px;
+         display: flex;
+         justify-content:space-between
+    }
+    .user-align-item{
+        margin-top:3px;
+        display: flex;
+        flex-direction:column;
+        align-items:center;
+        font-size:13px;
+    }
+    .user-align-item>span{
+        margin-top:7px;
+    }
 }
